--- a/src/CommonComponents/Navbar/Navbar.css
+++ b/src/CommonComponents/Navbar/Navbar.css
@@ -6,10 +6,11 @@ nav {
 }
 
 nav a{
+    font-family: "Lora", serif;
     color: #1b2629;
     text-decoration: none;
-    font-size: 1.3rem;
-    font-weight: 600;
+    font-size: 1.5rem;
+    font-weight: 700;
 }
 
 nav ul {
@@ -28,6 +29,7 @@ nav ul li a {
     font-size: 0.95rem;
     font-weight: 500;
     margin: 0 2.5em;
+    font-family: "Inter", sans-serif;
 }
 
 nav ul li::after {
