--- a/src/CommonComponents/FeaturedIn/FeaturedIn.css
+++ b/src/CommonComponents/FeaturedIn/FeaturedIn.css
@@ -8,6 +8,8 @@
     font-size: 1.2rem;
     font-weight: 500;
     margin: 2em 0;
+    letter-spacing: 3px;
+    text-transform: uppercase;
 }
 
 .brand-logos {
