--- a/src/Pages/Recipes/Recipes.css
+++ b/src/Pages/Recipes/Recipes.css
@@ -53,3 +53,10 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1.5em;
 }
+
+.no-recipe {
+    font-size: 1.5rem;
+    color: #858585;
+    font-weight: 500;
+    text-align: center;
+}
