--- a/src/Pages/RecipeDetails/RecipeDetails.css
+++ b/src/Pages/RecipeDetails/RecipeDetails.css
@@ -3,3 +3,15 @@
     margin: 3em auto;
     padding: 2em;
 }
+
+.img {
+    width: 95%;
+    margin: 2em auto;
+    border-radius: 35px;
+}
+
+.img img {
+    width: 100%;
+    border-radius: 35px;
+    height: 115vh;
+}
