--- a/src/Pages/RecipeDetails/RecipeDetails.css
+++ b/src/Pages/RecipeDetails/RecipeDetails.css
@@ -1,11 +1,10 @@
 .recipe-details {
-    border: 2px solid;
     margin: 3em auto;
     padding: 2em;
 }
 
 .img {
-    width: 95%;
+    width: 100%;
     margin: 2em auto;
     border-radius: 35px;
 }
@@ -13,5 +12,38 @@
 .img img {
     width: 100%;
     border-radius: 35px;
-    height: 115vh;
+    object-fit: contain;
+    height: 300px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 90%;
+    margin: auto;
+}
+
+.directions {
+    width: 47%;
+    padding: 1em 2em;
+    border-radius: 30px;
+    background-color: white;
+}
+
+.directions h2 {
+    color: #1b2629;
+    font-size: 2.1rem;
+    font-weight: 600;
+    line-height: 49px;
+    font-family: "Lora", "sans-serif";
+    margin: 0.5em 0;
+}
+
+.directions p {
+    color: #5c5c5c;
+    font-size: 1.1rem;
+    font-weight: 400;
+    line-height: 28px;
+    margin-bottom: 1.5em;
 }
