--- a/src/Pages/RecipeDetails/RecipeDetails.css
+++ b/src/Pages/RecipeDetails/RecipeDetails.css
@@ -1,18 +1,28 @@
 .recipe-details {
-    margin: 3em auto;
+    margin: 1.5em auto;
     padding: 2em;
 }
 
+.recipe-details-header {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 3em;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.recipe-detail {
+    width: 60%;
+}
+
 .img {
-    width: 100%;
+    width: 25%;
     margin: 2em auto;
-    border-radius: 35px;
 }
 
 .img img {
     width: 100%;
-    border-radius: 35px;
-    object-fit: contain;
+    border-radius: 20px;
     height: 300px;
 }
 
