navbar responsiveness updated

--- a/src/CommonComponents/Navbar/Navbar.css
+++ b/src/CommonComponents/Navbar/Navbar.css
@@ -108,3 +108,23 @@ nav ul li:hover::after {
         display: flex; 
     }
 }
+
+@media (max-width: 700px) {
+    .bg {
+        width: 40%;
+    }
+
+    nav ul {
+        width: 40%;
+    }
+}
+
+@media (max-width: 480px) {
+    .bg {
+        width: 50%;
+    }
+
+    nav ul {
+        width: 50%;
+    }
+}
