--- a/src/Pages/RecipeDetails/RecipeDetails.css
+++ b/src/Pages/RecipeDetails/RecipeDetails.css
@@ -9,6 +9,7 @@
     margin-bottom: 3em;
     align-items: center;
     justify-content: space-around;
+    margin-left: 1em;
 }
 
 .recipe-detail {
@@ -16,7 +17,7 @@
 }
 
 .img {
-    width: 25%;
+    width: 29%;
     margin: 2em auto;
 }
 
@@ -30,7 +31,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 90%;
+    width: 100%;
     margin: auto;
 }
 
