--- a/src/CommonComponents/AboutSection/AboutSection.css
+++ b/src/CommonComponents/AboutSection/AboutSection.css
@@ -16,7 +16,7 @@
 }
 
 .text-portion {
-    max-width: 43%;
+    width: 43%;
     padding: 0 1em;
 }
 
@@ -44,4 +44,51 @@
     width: 100%;
     object-fit: cover;
     border-radius: 50px;
+}
+
+@media (max-width: 768px) {
+    .about-section {
+        flex-direction: column;
+        padding: 0 1em;
+    }
+
+    .text-portion,
+    .img-portion {
+        width: 100%;
+        margin-bottom: 2em;
+    }
+
+    .text-portion {
+        text-align: left;
+    }
+
+    .about-heading {
+        font-size: 2.5rem;
+        text-align: left;
+    }
+
+    .text-portion p {
+        font-size: 1rem;
+        line-height: 28px;
+    }
+}
+
+@media (max-width: 480px) {
+    .about-section {
+        padding: 0 1em;
+        margin: 2em 0;
+    }
+
+    .about-heading {
+        font-size: 2rem;
+    }
+
+    .text-portion p {
+        font-size: 0.9rem;
+        line-height: 24px;
+    }
+
+    .img-portion img {
+        border-radius: 25px;
+    }
 }
