--- a/src/CommonComponents/CardBadge/CardBadge.css
+++ b/src/CommonComponents/CardBadge/CardBadge.css
@@ -6,4 +6,29 @@
     border-radius: 100vw;
     letter-spacing: 3px;
     text-transform: uppercase;
+    display: inline-block;
+}
+
+@media (max-width: 1000px) {
+    .badge {
+        padding: 0.5em 1em; 
+        font-size: 0.6rem;   
+        letter-spacing: 1px;
+    }
+}
+
+@media (max-width: 768px) {
+    .badge {
+        padding: 0.4em 0.65em;
+        font-size: 0.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .badge {
+        padding: 0.6em 1em;
+        font-size: 0.7rem;
+        letter-spacing: 1.5px;
+        margin: 0.8em 0;
+    }
 }
