--- a/src/CommonComponents/Footer/Footer.css
+++ b/src/CommonComponents/Footer/Footer.css
@@ -1,10 +1,6 @@
 footer {
     background-color: white;
-}
-
-footer section {
-    padding: 1em;
-    border-bottom: 1px solid rgba(27, 38, 41, 0.15);
+    width: 100%;
 }
 
 .email-section {
@@ -19,7 +15,7 @@ footer section {
     color: #1b2629;
     font-weight: 600;
     font-size: 2.4rem;
-    font-family: "Lora", serif;;
+    font-family: "Lora", serif;
 }
 
 .email-section div {
@@ -27,7 +23,7 @@ footer section {
 }
 
 .email-section input {
-    margin-right: 2em;
+    margin-right: 1em;
     padding: 1.3em 1.5em;
     outline: none;
     border-radius: 8px;
@@ -52,7 +48,7 @@ footer section {
     text-align: center;
 }
 
-.socials-section h2 a{
+.socials-section h2 a {
     font-family: "Lora", serif;
     color: #1b2629;
     text-decoration: none;
@@ -70,7 +66,8 @@ footer section {
 
 .social-icons {
     display: flex;
-    width: 20%;
+    width: 100%;
+    max-width: 400px;
     justify-content: space-around;
     margin: 1em 0;
     color: #9c702a;
@@ -78,7 +75,7 @@ footer section {
     cursor: pointer;
 }
 
-.social-icons :hover{
+.social-icons :hover {
     color: #b1905b;
 }
 
@@ -86,4 +83,66 @@ footer section {
     text-align: center;
     font-size: 0.9rem;
     color: #5c5c5c;
+}
+
+@media screen and (max-width: 1000px) {
+    .email-section {
+        flex-direction: column;
+    }
+
+    .email-section h1 {
+        margin-bottom: 1em;
+    }
+
+    .email-section div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 90%;
+    }
+
+    .email-section input {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .email-section h1 {
+        font-size: 1.5rem;
+        margin-bottom: 1em;
+    }
+
+    .email-section div {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .email-section div :nth-child(2) {
+        width: 100%;
+        margin-right: 1em;
+        margin-top: 1em;
+    }
+
+    .socials-section p {
+        max-width: 75%;
+    }
+
+    .social-icons {
+        width: 80%; 
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .email-section h1 {
+        font-size: 1rem;
+    }
+
+    .social-icons {
+        font-size: 1.2rem; 
+    }
+
+    .socials-section p {
+        max-width: 100%; 
+        font-size: 0.9rem;
+    }
 }
