--- a/src/CommonComponents/RecipeCard/RecipeCard.css
+++ b/src/CommonComponents/RecipeCard/RecipeCard.css
@@ -46,3 +46,52 @@ a {
     width: 100%;
     justify-content: space-between;
 }
+
+@media (max-width: 768px) {
+    .recipe-card {
+        width: 100%; 
+    }
+
+    .img-part img {
+        height: 35vh; 
+    }
+
+    .text-part h2 {
+        font-size: 1.5rem; 
+        line-height: 32px;
+    }
+
+    .text-part {
+        padding: 1em; 
+    }
+}
+
+@media (max-width: 480px) {
+    .recipe-card {
+        width: 100%;
+        border-radius: 20px; 
+    }
+
+    .img-part img {
+        height: 30vh;
+        border-radius: 20px;
+    }
+
+    .text-part {
+        padding: 0.8em;
+    }
+
+    .text-part h2 {
+        font-size: 1.25rem;
+        line-height: 28px;
+    }
+
+    .badge-container {
+        flex-direction: column; 
+        align-items: flex-start;
+    }
+
+    .badge-container > * {
+        margin-bottom: 0.5em; 
+    }
+}
