--- a/src/Pages/Recipes/Recipes.css
+++ b/src/Pages/Recipes/Recipes.css
@@ -15,7 +15,7 @@
 .search-wrapper {
     border: 1px solid transparent;
     border-radius: 8px;
-    max-width: 43%;
+    max-width: 70%;
     position: relative;
     margin: auto;
     background-color: white;
@@ -50,7 +50,7 @@
     margin: 2em;
     padding: 2em 0;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     gap: 1.5em;
 }
 
@@ -59,4 +59,31 @@
     color: #858585;
     font-weight: 500;
     text-align: center;
+}
+
+@media (max-width: 480px) {
+    .recipes h1 {
+        font-size: 2rem;
+    }
+
+    .search-wrapper {
+        max-width: 90%;
+    }
+
+    .recipes-container {
+        grid-template-columns: 1fr;
+        gap: 1em;
+    }
+
+    .search-wrapper .search-icon {
+        font-size: 1.25rem;
+    }
+
+    .search-wrapper input {
+        padding: 1em 1.2em;
+    }
+
+    .no-recipe {
+        font-size: 1.25rem;
+    }
 }
