--- a/src/CommonComponents/HeaderSection/HeaderSection.css
+++ b/src/CommonComponents/HeaderSection/HeaderSection.css
@@ -19,3 +19,36 @@
     font-size: 1.1rem;
     font-weight: 400;
 }
+
+@media (max-width: 850px) {
+    .header {
+        width: 80%;
+        margin: 2em auto 1em auto;
+    }
+
+    .header h1 {
+        font-size: 3rem;
+    }
+
+    .header p {
+        font-size: 0.95rem;
+        line-height: 28px;
+    }
+}
+
+@media (max-width: 480px) {
+    .header {
+        width: 95%;
+        padding: 0.8em 1.5em;
+        margin: 1.5em auto;
+    }
+
+    .header h1 {
+        font-size: 2.5rem;
+    }
+
+    .header p {
+        font-size: 0.85rem;
+        line-height: 25px;
+    }
+}
