--- a/src/CommonComponents/RecipeCard/RecipeCard.css
+++ b/src/CommonComponents/RecipeCard/RecipeCard.css
@@ -47,13 +47,18 @@ a {
     justify-content: space-between;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
+    body {
+        overflow-x: hidden;
+    }
+
     .recipe-card {
-        width: 100%; 
+        width: 90%; 
+        margin: auto;
     }
 
     .img-part img {
-        height: 35vh; 
+        height: 65vh; 
     }
 
     .text-part h2 {
@@ -66,14 +71,14 @@ a {
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 800px) {
     .recipe-card {
-        width: 100%;
+        width: 95%;
         border-radius: 20px; 
     }
 
     .img-part img {
-        height: 30vh;
+        height: 47vh;
         border-radius: 20px;
     }
 
@@ -86,12 +91,47 @@ a {
         line-height: 28px;
     }
 
-    .badge-container {
-        flex-direction: column; 
-        align-items: flex-start;
-    }
-
     .badge-container > * {
         margin-bottom: 0.5em; 
+    }
+}
+
+@media (max-width: 610px) {
+    .recipe-card {
+        width: 100%;
+    }
+
+    .img-part img {
+        height: 40vh;
+    }
+}
+
+@media (max-width: 550px) {
+    .recipe-card {
+        width: 80%;
+    }
+
+    .img-part img {
+        height: 60vh;
+    }
+}
+
+@media (max-width: 480px) {
+    .recipe-card {
+        width: 100%;
+    }
+
+    .img-part img {
+        height: 60vh;
+    }
+}
+
+@media (max-width: 400px) {
+    .recipe-card {
+        width: 90%;
+    }
+
+    .img-part img {
+        height: 50vh;
     }
 }
