--- a/src/Pages/RecipeDetails/RecipeDetails.css
+++ b/src/Pages/RecipeDetails/RecipeDetails.css
@@ -9,7 +9,6 @@
     margin-bottom: 3em;
     align-items: center;
     justify-content: space-around;
-    margin-left: 1em;
 }
 
 .recipe-detail {
@@ -25,6 +24,7 @@
     width: 100%;
     border-radius: 20px;
     height: 300px;
+    object-fit: cover;
 }
 
 .container {
@@ -57,4 +57,44 @@
     font-weight: 400;
     line-height: 28px;
     margin-bottom: 1.5em;
+}
+
+@media (max-width: 850px) {
+    .recipe-details-header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .recipe-detail {
+        width: 100%;
+        margin-bottom: 1em;
+    }
+
+    .img {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .img img {
+        height: auto; 
+    }
+
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .directions {
+        width: 90%;
+    }
+}
+
+@media (max-width: 480px) {
+    .directions h2 {
+        font-size: 1.5rem;
+    }
+
+    .directions p {
+        font-size: 0.9rem;
+    }
 }
