--- a/src/Components/RecipesSection/RecipesSection.css
+++ b/src/Components/RecipesSection/RecipesSection.css
@@ -1,5 +1,4 @@
 .recipes-section {
-    /* border: 2px solid; */
     padding: 1em 2em;
     margin: 6em 0 3em 0;
 }
@@ -11,4 +10,21 @@
     font-family: "Lora", serif;
     text-align: left;
     margin-bottom: 1em;
+}
+
+@media (max-width: 768px) {
+    .recipes-section {
+        padding: 1em;
+        margin: 4em 0 2em 0;
+    }
+
+    .recipes-section h1 {
+        font-size: 2.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .recipes-section h1 {
+        font-size: 2rem;
+    }
 }
