--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -21,3 +21,33 @@
     margin: 1em auto;
     line-height: 57px;
 }
+
+@media (max-width: 768px) {
+    .text {
+        padding: 2em;
+        margin: 4em 0 4.5em 0;
+    }
+
+    .text h1 {
+        font-size: 2.25rem;
+        line-height: 50px;
+        width: 90%;
+    }
+}
+
+@media (max-width: 480px) {
+    .text {
+        padding: 1.5em;
+        margin: 3em 0 3.5em 0;
+    }
+
+    .text h1 {
+        font-size: 1.75rem;
+        line-height: 40px;
+        width: 95%;
+    }
+
+    .text img {
+        width: 30px; 
+    }
+}
