--- a/src/CommonComponents/Navbar/Navbar.css
+++ b/src/CommonComponents/Navbar/Navbar.css
@@ -101,7 +101,7 @@ nav ul li:hover a {
         position: absolute;
         top: 0;
         right: 0;
-        width: 30%;
+        width: 100%;
         background-color: white;
         transform: translateX(100%);
         opacity: 0;
@@ -121,16 +121,16 @@ nav ul li:hover a {
         right: 0;
         background: white;
         flex-direction: column;
-        width: 30%;
-        height: 100%;
+        width: 100%;
+        height: 100vh;
         opacity: 0;
         visibility: hidden;
-        z-index: 2;
+        z-index: 4;
     }
 
     nav ul li:hover::after {
-        width: 40%;
-        left: 30%;
+        width: 10%;
+        left: 45%;
     }
 
     nav ul.open {
