--- a/src/CommonComponents/Navbar/Navbar.css
+++ b/src/CommonComponents/Navbar/Navbar.css
@@ -128,6 +128,10 @@ nav ul li:hover a {
         z-index: 4;
     }
 
+    nav ul li {
+        margin-bottom: 1.5em;
+    }
+
     nav ul li:hover::after {
         width: 10%;
         left: 45%;
@@ -136,6 +140,8 @@ nav ul li:hover a {
     nav ul.open {
         opacity: 1;
         visibility: visible;
+        display: flex;
+        justify-content: center;
     }
 
     .menu-toggle {
